ovs-base: Create new ovs-base image
This patch creates a new ovs-base image which handles the actual
building of the OVS source code.  This significantly simplifies the
related docker files.  Furthermore, by cleverly organizing the
ovs-base image so that intermediate files are created and deleted in
the same command, this patch significantly reduces the amount of data
transfered to the docker repository.

--- a/ovsdb/Dockerfile
+++ b/ovsdb/Dockerfile
@@ -1,35 +1,7 @@
-FROM ubuntu:14.04
-RUN apt-get update
-RUN apt-get install -y \
-    gcc \
-    make \
-    build-essential \
-    libssl-dev \
-    autoconf \
-    automake \
-    libtool \
-    python \
-    perl \
-    git
+FROM quay.io/netsys/ovs-base
 
-WORKDIR /tmp
-RUN git clone https://github.com/openvswitch/ovs
-
-WORKDIR /tmp/ovs
-RUN ./boot.sh
-RUN ./configure
-RUN make
-RUN make install
-
-RUN mkdir -p /usr/local/var/log/openvswitch \
-    /usr/local/var/lib/openvswitch \
-    /usr/local/var/lib/openvswitch/pki \
-    /usr/local/var/run/openvswitch \
-    /usr/local/etc/openvswitch
-RUN ovsdb-tool create /usr/local/etc/openvswitch/conf.db \
-    /usr/local/share/openvswitch/vswitch.ovsschema
-
-RUN rm -rf /tmp/ovs
+RUN ovsdb-tool create /etc/openvswitch/conf.db \
+    /share/openvswitch/vswitch.ovsschema
 
 ENTRYPOINT ["ovsdb-server", \
     "--remote=punix:/usr/local/var/run/openvswitch/db.sock", \
