docker: Reorganize and simplify the containers
This patch pretty significantly simplifies the container management by
making use of volumes.  It also has ovsdb-server automatically attach
to the ovnnb and ovnsb databases so they don't have to be added with
appctl.

--- a/ovn-controller/Dockerfile
+++ b/ovn-controller/Dockerfile
@@ -1,6 +1,4 @@
 FROM quay.io/netsys/ovs-base
 
-ADD boot.sh /opt/boot.sh
-RUN chmod +x /opt/boot.sh
-
-ENTRYPOINT ["/opt/boot.sh"]
+ENTRYPOINT ["ovn-controller", "--log-file=/var/log/openvswitch/ovn-controller.log", \
+            "--pidfile"]
