make: Change location of the OVS containers
Now that we've named the Quilt project, it makes sense to move these
containers into the fold.

--- a/ovn-controller/Dockerfile
+++ b/ovn-controller/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/netsys/ovs-base
+FROM quilt/ovs:latest
 
 ENTRYPOINT ["ovn-controller", "--log-file=/var/log/openvswitch/ovn-controller.log", \
             "--pidfile"]
