--- a/ovs-vswitchd/Dockerfile
+++ b/ovs-vswitchd/Dockerfile
@@ -1,3 +1,3 @@
-FROM quay.io/netsys/ovs-base
+FROM quilt/ovs:latest
 
 ENTRYPOINT ["ovs-vswitchd", "--pidfile", "--log-file=/var/log/openvswitch/ovs-vswitchd.log"]
