--- a/ovn-northd/Dockerfile
+++ b/ovn-northd/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/netsys/ovs-base
+FROM quilt/ovs:latest
 
 ENTRYPOINT ["ovn-northd", "--log-file=/var/log/openvswitch/ovn-northd.log", \
             "--pidfile"]
